--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ name = "generate-invoice"
 path = "src/main.rs"
 
 [dependencies]
+base64 = "0.13.0"
 chrono = "0.4.19"
 csv = "1.1.6"
 html5ever = "0.25.1"
@@ -17,3 +18,4 @@ maplit = "1.0.2"
 markup5ever = "0.10.1"
 serde = "1.0.130"
 serde_derive = "1.0.130"
+serde_json = "1.0.59"
